--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -98,6 +98,7 @@ jobs:
     environment: dev
     permissions:
       contents: read
+      issues: write
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
