env example updated

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
-#SHARED
-# https://alchemy.run/concepts/secret/#encryption-password
+#SETUP - Required to setup GH environemnts via `bun run gh:setup:`
+GITHUB_TOKEN=
+
+#SHARED - Required to run alchemy deployments
 ALCHEMY_PASSWORD=
+ALCHEMY_STATE_TOKEN=
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_API_TOKEN=
 
 #BACKEND
+CDP_CLIENT_API_KEY=
 CDP_API_KEY_ID=
 CDP_API_KEY_SECRET=
 CDP_WALLET_SECRET=
-CDP_CLIENT_API_KEY=
 
-#DEMO APP
-COUCH_API_KEY=
-COUCH_WEBHOOK_SECRET=
+#PLAYGROUND
+TEST_COUCH_ACCOUNT_ADDRESS=
+TEST_COUCH_ACCOUNT_APIKEY=
+TEST_COUCH_ACCOUNT_WEBHOOK_SECRET=
