--- a/turbo.json
+++ b/turbo.json
@@ -29,6 +29,7 @@
       "dependsOn": ["test"]
     },
     "infra:deploy": {
+      "dependsOn": ["^infra:deploy"],
       "cache": false,
       "env": [
         "STAGE",
@@ -75,6 +76,13 @@
         "TEST_COUCH_ACCOUNT_ADDRESS",
         "TEST_COUCH_ACCOUNT_APIKEY"
       ]
+    },
+    "backend#infra:destroy": {
+      "dependsOn": ["playground#infra:destroy"],
+      "cache": false
+    },
+    "playground#infra:destroy": {
+      "cache": false
     }
   }
 }
