--- a/turbo.json
+++ b/turbo.json
@@ -36,23 +36,17 @@
     },
     "db:generate": {
       "cache": false,
-      "dependsOn": [
-        "test"
-      ]
+      "dependsOn": ["test"]
     },
     "infra:deploy": {
-      "dependsOn": [
-        "^infra:deploy"
-      ],
+      "dependsOn": ["^infra:deploy"],
       "cache": false
     },
     "infra:destroy": {
       "cache": false
     },
     "backend#infra:destroy": {
-      "dependsOn": [
-        "playground#infra:destroy"
-      ],
+      "dependsOn": ["playground#infra:destroy"],
       "cache": false
     },
     "playground#infra:destroy": {
