apps/backend -> /backend

--- a/apps/playground/tsconfig.json
+++ b/apps/playground/tsconfig.json
@@ -24,7 +24,7 @@
     "skipLibCheck": true,
     "types": ["@cloudflare/workers-types"],
     "paths": {
-      "@/*": ["./src/*", "../backend/src/*"],
+      "@/*": ["./src/*", "../../backend/src/*"],
       "@public/*": ["./public/*"]
     }
   }
