--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typecheck": "turbo typecheck",
     "fix": "biome check . --write",
     "gh:setup:dev": "alchemy deploy scripts/github.dev.environment.ts",
-    "gh:setup:sandbox": "alchemy deploy scripts/github.sandbox.environment.ts",
+    "gh:setup:staging": "alchemy deploy scripts/github.staging.environment.ts",
     "gh:setup:prod": "alchemy deploy scripts/github.prod.environment.ts",
     "db:generate": "turbo db:generate",
     "infra:deploy": "turbo infra:deploy",
