--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
 #SETUP - Required to setup GH environemnts via `bun run gh:setup:`
 GITHUB_TOKEN=
 
-#SHARED - Required to run alchemy deployments
-ALCHEMY_PASSWORD=
+#SHARED ACROSS ENVIRONMENTS (Respository Secret)
 ALCHEMY_STATE_TOKEN=
 CLOUDFLARE_ACCOUNT_ID=
+
+#PER ENVIRONMENT (DEV/STAGING/PROD)
+###################################
+
+#DEV
+#---
+
+#SHARED - Required to run alchemy deployments
+ALCHEMY_PASSWORD=
 CLOUDFLARE_API_TOKEN=
 
 #BACKEND
@@ -14,6 +22,12 @@ CDP_API_KEY_SECRET=
 CDP_WALLET_SECRET=
 
 #PLAYGROUND
-TEST_COUCH_ACCOUNT_ADDRESS=
-TEST_COUCH_ACCOUNT_APIKEY=
-TEST_COUCH_ACCOUNT_WEBHOOK_SECRET=
+COUCH_TEST_ACCOUNT_ADDRESS=
+COUCH_TEST_ACCOUNT_APIKEY=
+COUCH_TEST_ACCOUNT_SUBSCRIPTION_OWNER_ADDRESS=
+
+#STAGING
+#-------
+
+#PROD
+#----
