workflows and envs cleanup

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,23 @@
+###################################
+#Scripts/Utils
+###################################
+
 #SETUP - Required to setup GH environemnts via `bun run gh:setup:`
 GITHUB_TOKEN=
 
-#SHARED ACROSS ENVIRONMENTS (Respository Secret)
+
+###################################
+#GLOBAL
+###################################
+
+#SHARED ACROSS ENVIRONMENTS (ie respository Secret)
 ALCHEMY_STATE_TOKEN=
 CLOUDFLARE_ACCOUNT_ID=
 
+
+###################################
 #PER ENVIRONMENT (DEV/STAGING/PROD)
 ###################################
-
-#DEV
-#---
 
 #SHARED - Required to run alchemy deployments
 ALCHEMY_PASSWORD=
@@ -25,9 +33,3 @@ CDP_WALLET_SECRET=
 COUCH_TEST_ACCOUNT_ADDRESS=
 COUCH_TEST_ACCOUNT_APIKEY=
 COUCH_TEST_ACCOUNT_SUBSCRIPTION_OWNER_ADDRESS=
-
-#STAGING
-#-------
-
-#PROD
-#----
