--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "backend": "workspace:*",
+    "hono": "catalog:cloudflare",
     "@base-org/account": "catalog:coinbase",
     "@coinbase/cdp-sdk": "catalog:coinbase",
-    "hono": "catalog:cloudflare",
+    "react": "catalog:react",
+    "react-dom": "catalog:react",
+    "react-router-dom": "catalog:react",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -24,9 +27,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
@@ -35,14 +35,14 @@
     "alchemy": "catalog:",
     "miniflare": "catalog:cloudflare",
     "@cloudflare/workers-types": "catalog:cloudflare",
-    "vite-plugin-node-polyfills": "^0.24.0",
+    "@cloudflare/vite-plugin": "catalog:cloudflare",
+    "@types/react": "catalog:react",
+    "@types/react-dom": "catalog:react",
     "vite": "7.2.6",
-    "tw-animate-css": "^1.4.0",
-    "@cloudflare/vite-plugin": "^1.15.3",
-    "@tailwindcss/vite": "^4.1.17",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "@vitejs/plugin-react": "^5.1.1",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "tw-animate-css": "^1.4.0",
+    "@tailwindcss/vite": "^4.1.17"
   }
 }
