--- a/backend/package.json
+++ b/backend/package.json
@@ -21,20 +21,19 @@
     }
   },
   "dependencies": {
+    "hono": "catalog:cloudflare",
     "@base-org/account": "catalog:coinbase",
     "@coinbase/cdp-sdk": "catalog:coinbase",
-    "hono": "catalog:cloudflare",
-    "viem": "^2.40.3",
+    "viem": "catalog:crypto",
     "drizzle-orm": "^0.44.7"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "catalog:cloudflare",
-    "@types/bun": "latest",
-    "@types/node": "catalog:cloudflare",
     "alchemy": "catalog:",
-    "miniflare": "catalog:cloudflare",
     "typescript": "catalog:",
-    "@actions/core": "^1.11.1",
+    "@cloudflare/workers-types": "catalog:cloudflare",
+    "@types/node": "catalog:cloudflare",
+    "miniflare": "catalog:cloudflare",
+    "@types/bun": "latest",
     "drizzle-kit": "^0.31.7"
   }
 }
