--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -118,7 +118,7 @@ jobs:
           PLAYGROUND_URL="https://playground.staging.cou.ch"
 
           echo "Registering webhook at $PLAYGROUND_URL/api/webhook..."
-          WEBHOOK_RESPONSE=$(curl -X PUT $BACKEND_URL/api/webhook \
+          WEBHOOK_RESPONSE=$(curl -X PUT $BACKEND_URL/v1/webhook \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer $API_KEY" \
             -d "{\"url\":\"$PLAYGROUND_URL/api/webhook\"}" \
