moving deployment notices to their correct location into the workflow

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -116,7 +116,7 @@ jobs:
       - name: "Deploy backend"
         id: backend
         run: bun run infra:deploy --filter=backend
-        # Note: api_url and db_id outputs are set in alchemy.run.ts
+        # Note: api_url and db_name outputs are set in alchemy.run.ts
         env:
           STAGE: ${{ env.STAGE }}
           ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
@@ -131,6 +131,9 @@ jobs:
           PULL_REQUEST: ${{ github.event.number }}
           GITHUB_SHA: ${{ github.sha }}
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: "Output backend deployment URL"
+        run: echo "::notice::Backend deployed to ${{ steps.backend.outputs.api_url }}"
 
       - name: "Seed test account in database"
         run: .github/scripts/seed-test-account.sh
@@ -184,12 +187,9 @@ jobs:
 
           echo "✅ Webhook registered successfully"
 
-          # Output webhook secret for playground deployment
+          # Output webhook secret and playground URL for next step
           echo "webhook_secret=$WEBHOOK_SECRET" >> $GITHUB_OUTPUT
-
-          # Output URLs for summary
-          echo "::notice::Backend deployed to $BACKEND_URL"
-          echo "::notice::Playground will be deployed to $PLAYGROUND_URL"
+          echo "playground_url=$PLAYGROUND_URL" >> $GITHUB_OUTPUT
 
       - name: "Deploy playground"
         run: bun run infra:deploy --filter=playground
@@ -210,6 +210,9 @@ jobs:
           PULL_REQUEST: ${{ github.event.number }}
           GITHUB_SHA: ${{ github.sha }}
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: "Output playground deployment URL"
+        run: echo "::notice::Playground deployed to ${{ steps.couch.outputs.playground_url }}"
 
   cleanup:
     name: "Cleanup preview"
