monorepo dependencies catalog

--- a/apps/playground/tsconfig.json
+++ b/apps/playground/tsconfig.json
@@ -22,7 +22,7 @@
     "rewriteRelativeImportExtensions": true,
     "strict": true,
     "skipLibCheck": true,
-    "types": ["@cloudflare/workers-types"],
+    "types": ["@cloudflare/workers-types", "@types/node"],
     "paths": {
       "@/*": ["./src/*", "../../backend/src/*"],
       "@public/*": ["./public/*"]
