--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -17,6 +17,8 @@
     "react": "catalog:react",
     "react-dom": "catalog:react",
     "react-router-dom": "catalog:react",
+    "tailwind-merge": "catalog:tailwind",
+    "tailwindcss": "catalog:tailwind",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -26,9 +28,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.555.0",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "lucide-react": "^0.555.0"
   },
   "devDependencies": {
     "typescript": "catalog:",
@@ -36,13 +36,14 @@
     "miniflare": "catalog:cloudflare",
     "@cloudflare/workers-types": "catalog:cloudflare",
     "@cloudflare/vite-plugin": "catalog:cloudflare",
+    "@types/node": "catalog:cloudflare",
     "@types/react": "catalog:react",
     "@types/react-dom": "catalog:react",
-    "vite": "7.2.6",
-    "vite-plugin-node-polyfills": "^0.24.0",
-    "@vitejs/plugin-react": "^5.1.1",
-    "vite-tsconfig-paths": "^5.1.4",
-    "tw-animate-css": "^1.4.0",
-    "@tailwindcss/vite": "^4.1.17"
+    "vite": "catalog:vite",
+    "vite-plugin-node-polyfills": "catalog:vite",
+    "@vitejs/plugin-react": "catalog:vite",
+    "vite-tsconfig-paths": "catalog:vite",
+    "@tailwindcss/vite": "catalog:vite",
+    "tw-animate-css": "catalog:tailwind"
   }
 }
