--- a/package.json
+++ b/package.json
@@ -35,17 +35,33 @@
       },
       "coinbase": {
         "@base-org/account": "2.5.0",
-        "@coinbase/cdp-sdk": "^1.38.6"
+        "@coinbase/cdp-sdk": "^1.38.6",
+        "@coinbase/cdp-core": "^0.0.71",
+        "@coinbase/cdp-hooks": "^0.0.71"
       },
       "crypto": {
-        "viem": "^2.41.2"
+        "viem": "^2.41.2",
+        "wagmi": "^3.1.0"
       },
       "react": {
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
         "react-router-dom": "^7.10.0",
         "@types/react": "19.2.7",
-        "@types/react-dom": "19.2.3"
+        "@types/react-dom": "19.2.3",
+        "@tanstack/react-query": "^5.90.12"
+      },
+      "vite": {
+        "vite": "^7.2.6",
+        "vite-plugin-node-polyfills": "^0.24.0",
+        "@vitejs/plugin-react": "^5.1.1",
+        "vite-tsconfig-paths": "^5.1.4",
+        "@tailwindcss/vite": "^4.1.17"
+      },
+      "tailwind": {
+        "tailwindcss": "^4.1.17",
+        "tailwind-merge": "^3.4.0",
+        "tw-animate-css": "^1.4.0"
       }
     }
   },
