scaffolded merchant app setup

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ CDP_WALLET_SECRET=
 COUCH_TEST_ACCOUNT_ADDRESS=
 COUCH_TEST_ACCOUNT_APIKEY=
 COUCH_TEST_ACCOUNT_SUBSCRIPTION_OWNER_ADDRESS=
+
+#MERCHANT
+CDP_PROJECT_ID=
