disable playground continous delivery

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -6,7 +6,7 @@ on:
 
 concurrency:
   group: deploy-${{ github.ref }}
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 env:
   STAGE: pr-${{ github.event.number }}
@@ -88,158 +88,79 @@ jobs:
         run: bun install
 
       - name: Run tests
-        run: bun run test:unit
+        run: bun run test
 
-  # TEMPORARILY DISABLED: Preview deployments are disabled
-  # To re-enable, uncomment this job
-  # deploy:
-  #   name: "Preview Deployment"
-  #   needs: [security-check, lint, format, typecheck, test]
-  #   if: ${{ github.event.action != 'closed' && needs.security-check.outputs.is-fork == 'false' }}
-  #   runs-on: ubuntu-latest
-  #   environment: dev
-  #   permissions:
-  #     contents: read
-  #     pull-requests: write
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: oven-sh/setup-bun@v2
-  #
-  #     - name: "Generate Captain Alchemy token"
-  #       id: app-token
-  #       uses: actions/create-github-app-token@v1
-  #       with:
-  #         app-id: ${{ secrets.CAPTAIN_ALCHEMY_APP_ID }}
-  #         private-key: ${{ secrets.CAPTAIN_ALCHEMY_PRIVATE_KEY }}
-  #
-  #     - name: "Install dependencies"
-  #       run: bun install
-  #
-  #     - name: "Deploy backend"
-  #       id: backend
-  #       run: bun run infra:deploy --filter=backend
-  #       # Note: api_url and db_name outputs are set in alchemy.run.ts
-  #       env:
-  #         STAGE: ${{ env.STAGE }}
-  #         ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
-  #         ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
-  #         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  #         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-  #         CDP_API_KEY_ID: ${{ secrets.CDP_API_KEY_ID }}
-  #         CDP_API_KEY_SECRET: ${{ secrets.CDP_API_KEY_SECRET }}
-  #         CDP_WALLET_SECRET: ${{ secrets.CDP_WALLET_SECRET }}
-  #         CDP_CLIENT_API_KEY: ${{ secrets.CDP_CLIENT_API_KEY }}
-  #         COUCH_TEST_ACCOUNT_ADDRESS: ${{ secrets.COUCH_TEST_ACCOUNT_ADDRESS }}
-  #         PULL_REQUEST: ${{ github.event.number }}
-  #         GITHUB_SHA: ${{ github.sha }}
-  #         GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-  #
-  #     - name: "Output backend deployment URL"
-  #       run: echo "::notice::Backend deployed to ${{ steps.backend.outputs.api_url }}"
-  #
-  #     - name: "Seed test account in database"
-  #       run: .github/scripts/seed-test-account.sh
-  #       env:
-  #         DATABASE_NAME: ${{ steps.backend.outputs.db_name }}
-  #         COUCH_TEST_ACCOUNT_ADDRESS: ${{ secrets.COUCH_TEST_ACCOUNT_ADDRESS }}
-  #         COUCH_TEST_ACCOUNT_APIKEY: ${{ secrets.COUCH_TEST_ACCOUNT_APIKEY }}
-  #         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  #         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-  #
-  #     - name: "Register webhook on the backend"
-  #       id: couch
-  #       run: |
-  #         BACKEND_URL="${{ steps.backend.outputs.api_url }}"
-  #         API_KEY="${{ secrets.COUCH_TEST_ACCOUNT_APIKEY }}"
-  #
-  #         # Construct playground URL from backend URL
-  #         # Backend: couch-backend-pr-5-api.workers.dev
-  #         # Playground: couch-playground-pr-5-website.workers.dev
-  #         PLAYGROUND_URL="${BACKEND_URL/couch-backend/couch-playground}"
-  #         PLAYGROUND_URL="${PLAYGROUND_URL/-api/-website}"
-  #
-  #         echo "Registering webhook at $PLAYGROUND_URL/api/webhook..."
-  #         WEBHOOK_RESPONSE=$(curl -X PUT $BACKEND_URL/v1/webhook \
-  #           -H "Content-Type: application/json" \
-  #           -H "Authorization: Bearer $API_KEY" \
-  #           -d "{\"url\":\"$PLAYGROUND_URL/api/webhook\"}" \
-  #           -s -w "\n%{http_code}")
-  #
-  #         WEBHOOK_HTTP_CODE=$(echo "$WEBHOOK_RESPONSE" | tail -n1)
-  #         WEBHOOK_BODY=$(echo "$WEBHOOK_RESPONSE" | sed '$d')
-  #
-  #         if [ "$WEBHOOK_HTTP_CODE" != "200" ] && [ "$WEBHOOK_HTTP_CODE" != "201" ]; then
-  #           echo "Error: Webhook registration failed with HTTP $WEBHOOK_HTTP_CODE"
-  #           echo "Response structure: $(echo "$WEBHOOK_BODY" | jq 'keys')"
-  #           exit 1
-  #         fi
-  #
-  #         WEBHOOK_SECRET=$(echo "$WEBHOOK_BODY" | jq -r '.secret')
-  #
-  #         # Mask webhook secret IMMEDIATELY before any error handling that might echo it
-  #         if [ -n "$WEBHOOK_SECRET" ] && [ "$WEBHOOK_SECRET" != "null" ]; then
-  #           echo "::add-mask::$WEBHOOK_SECRET"
-  #         fi
-  #
-  #         if [ -z "$WEBHOOK_SECRET" ] || [ "$WEBHOOK_SECRET" = "null" ]; then
-  #           echo "Error: Failed to extract webhook secret from response"
-  #           echo "Response structure: $(echo "$WEBHOOK_BODY" | jq 'keys')"
-  #           exit 1
-  #         fi
-  #
-  #         echo "✅ Webhook registered successfully"
-  #
-  #         # Output webhook secret and playground URL for next step
-  #         echo "webhook_secret=$WEBHOOK_SECRET" >> $GITHUB_OUTPUT
-  #         echo "playground_url=$PLAYGROUND_URL" >> $GITHUB_OUTPUT
-  #
-  #     - name: "Deploy playground"
-  #       run: bun run infra:deploy --filter=playground
-  #       env:
-  #         STAGE: ${{ env.STAGE }}
-  #         ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
-  #         ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
-  #         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  #         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-  #         CDP_API_KEY_ID: ${{ secrets.CDP_API_KEY_ID }}
-  #         CDP_API_KEY_SECRET: ${{ secrets.CDP_API_KEY_SECRET }}
-  #         CDP_WALLET_SECRET: ${{ secrets.CDP_WALLET_SECRET }}
-  #         CDP_CLIENT_API_KEY: ${{ secrets.CDP_CLIENT_API_KEY }}
-  #         COUCH_TEST_ACCOUNT_ADDRESS: ${{ secrets.COUCH_TEST_ACCOUNT_ADDRESS }}
-  #         COUCH_TEST_ACCOUNT_SUBSCRIPTION_OWNER_ADDRESS: ${{ secrets.COUCH_TEST_ACCOUNT_SUBSCRIPTION_OWNER_ADDRESS }}
-  #         COUCH_TEST_ACCOUNT_WEBHOOK_SECRET: ${{ steps.couch.outputs.webhook_secret }}
-  #         COUCH_TEST_ACCOUNT_APIKEY: ${{ secrets.COUCH_TEST_ACCOUNT_APIKEY }}
-  #         PULL_REQUEST: ${{ github.event.number }}
-  #         GITHUB_SHA: ${{ github.sha }}
-  #         GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-  #
-  #     - name: "Output playground deployment URL"
-  #       run: echo "::notice::Playground deployed to ${{ steps.couch.outputs.playground_url }}"
-  #
-  # cleanup:
-  #   name: "Cleanup preview"
-  #   runs-on: ubuntu-latest
-  #   if: ${{ github.event.action == 'closed' }}
-  #   environment: dev
-  #   permissions:
-  #     contents: read
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: oven-sh/setup-bun@v2
-  # 
-  #     - name: Install dependencies
-  #       run: bun install
-  #
-  #     - name: Destroy preview
-  #       run: bun run infra:destroy
-  #       env:
-  #         STAGE: ${{ env.STAGE }}
-  #         ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
-  #         ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
-  #         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  #         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-  #         CDP_API_KEY_ID: ${{ secrets.CDP_API_KEY_ID }}
-  #         CDP_API_KEY_SECRET: ${{ secrets.CDP_API_KEY_SECRET }}
-  #         CDP_WALLET_SECRET: ${{ secrets.CDP_WALLET_SECRET }}
-  #         CDP_CLIENT_API_KEY: ${{ secrets.CDP_CLIENT_API_KEY }}
-  #         COUCH_TEST_ACCOUNT_ADDRESS: ${{ secrets.COUCH_TEST_ACCOUNT_ADDRESS }}
+  deploy:
+    name: "Preview Deployment"
+    needs: [security-check, lint, format, typecheck, test]
+    if: ${{ github.event.action != 'closed' && needs.security-check.outputs.is-fork == 'false' }}
+    runs-on: ubuntu-latest
+    environment: dev
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+
+      - name: "Generate Captain Alchemy token"
+        id: app-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.CAPTAIN_ALCHEMY_APP_ID }}
+          private-key: ${{ secrets.CAPTAIN_ALCHEMY_PRIVATE_KEY }}
+
+      - name: "Install dependencies"
+        run: bun install
+
+      - name: "Deploy"
+        id: deployment
+        run: bun run infra:deploy
+        env:
+          STAGE: ${{ env.STAGE }}
+          ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
+          ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CDP_API_KEY_ID: ${{ secrets.CDP_API_KEY_ID }}
+          CDP_API_KEY_SECRET: ${{ secrets.CDP_API_KEY_SECRET }}
+          CDP_WALLET_SECRET: ${{ secrets.CDP_WALLET_SECRET }}
+          CDP_CLIENT_API_KEY: ${{ secrets.CDP_CLIENT_API_KEY }}
+          COUCH_TEST_ACCOUNT_ADDRESS: ${{ secrets.COUCH_TEST_ACCOUNT_ADDRESS }}
+          PULL_REQUEST: ${{ github.event.number }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: "Output deployment URLs"
+        # Note: api_url and app_url outputs are set in alchemy.run.ts
+        run: |
+          echo "::notice::Api deployed to ${{ steps.deployment.outputs.api_url }}"
+          echo "::notice::App deployed to ${{ steps.deployment.outputs.app_url }}"
+
+  cleanup:
+    name: "Cleanup preview"
+    runs-on: ubuntu-latest
+    if: ${{ github.event.action == 'closed' }}
+    environment: dev
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+
+      - name: Install dependencies
+        run: bun install
+
+      - name: Destroy preview
+        run: bun run infra:destroy
+        env:
+          STAGE: ${{ env.STAGE }}
+          ALCHEMY_PASSWORD: ${{ secrets.ALCHEMY_PASSWORD }}
+          ALCHEMY_STATE_TOKEN: ${{ secrets.ALCHEMY_STATE_TOKEN }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CDP_API_KEY_ID: ${{ secrets.CDP_API_KEY_ID }}
+          CDP_API_KEY_SECRET: ${{ secrets.CDP_API_KEY_SECRET }}
+          CDP_WALLET_SECRET: ${{ secrets.CDP_WALLET_SECRET }}
+          CDP_CLIENT_API_KEY: ${{ secrets.CDP_CLIENT_API_KEY }}
+          COUCH_TEST_ACCOUNT_ADDRESS: ${{ secrets.COUCH_TEST_ACCOUNT_ADDRESS }}
