--- a/turbo.json
+++ b/turbo.json
@@ -46,10 +46,10 @@
       "cache": false
     },
     "backend#infra:destroy": {
-      "dependsOn": ["playground#infra:destroy"],
+      "dependsOn": ["merchant#infra:destroy"],
       "cache": false
     },
-    "playground#infra:destroy": {
+    "merchant#infra:destroy": {
       "cache": false
     }
   }
